# system-integration-assignments

./: README.md  documentation.txt  package-lock.json  words.csv  words.json  words.txt  words.xml  words.yaml
.github/workflows/: main_on-products-file-upload.yml
html/: app.js  index.html  package-lock.json  package.json
node/: package-lock.json  package.json
node/date-server/: app.js  index.js  package-lock.json  package.json
node/date-server/routers/: devices.js  users.js
node/my-node-server/: package-lock.json  package.json
node/my-node-server/dist-server/: app.js
node/my-node-server/dist-server/routes/: fileReaders.js  index.js
node/my-node-server/dist-server/schemas/: Pet.js
node/my-node-server/dist-server/utils/: fileReaders.js
node/my-node-server/openapi/: definitions.yaml
node/my-node-server/public/: index.html
node/my-node-server/server/: app.js
node/my-node-server/server/routes/: fileReaders.js  index.js
node/my-node-server/server/schemas/: Pet.js
node/my-node-server/server/utils/: fileReaders.js
node/src/: app.js
python/: app.py  pyproject.toml
python/date-server/: pyproject.toml  server.py
python/flask-server/: pyproject.toml
python/python-server/: main.py  pyproject.toml  runserver.py
sockets/: app.js  package.json  users.js
sockets/public/: index.html
web-socket-server/: app.js  index.html  package-lock.json  package.json
