[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["dimitrios"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
emoji = "^2.0.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
