[tool.poetry]
name = "date-server"
version = "0.1.0"
description = ""
authors = ["Dimitrios Gkiokas <dimitris.giokas1@gmail.com>"]
readme = "README.md"
packages = [{include = "date_server"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
fastapi = "^0.82.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
