[tool.poetry]
name = "flask-server"
version = "0.1.0"
description = ""
authors = ["Dimitrios Gkiokas <dimitris.giokas1@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_server"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
