[tool.poetry]
name = "python-server"
version = "0.1.0"
description = ""
authors = ["dimitrios"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.18.3"
fastapi = "^0.81.0"
autopep8 = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
